--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,13 @@ jobs:
       run: hugo --minify
 
     - name: Deploy with rsync
-      uses: appleboy/scp-action@v0.1.4
+      uses: appleboy/rsync-action@v0.0.5
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         source: "public/"
-        target: "/var/www/html/"
-        rm: true
+        target: ${{ secrets.SERVER_DEPLOY_PATH }}
+        port: ${{ secrets.SERVER_DEPLOY_PORT }}
+        delete: true
 
