--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,13 @@ jobs:
       run: hugo --minify
 
     - name: Deploy with rsync
-      uses: appleboy/rsync-action@v0.0.5
+      uses: appleboy/scp-action@v0.0.5
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         source: "public/"
         target: ${{ secrets.SERVER_DEPLOY_PATH }}
-        port: ${{ secrets.SERVER_DEPLOY_PORT }}
-        delete: true
+        port: ${{ secrets.SERVER_PORT }}
+        rm: true
 
