--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,13 @@ jobs:
       run: hugo --minify
 
     - name: Deploy with rsync
-      uses: appleboy/scp-action@v0.1.3
+      uses: burnett01/rsync-deployments@7.0.2
       with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        source: "public/"
-        target: ${{ secrets.SERVER_DEPLOY_PATH }}
-        port: ${{ secrets.SERVER_PORT }}
-        rm: true
+        switches: -avzr --delete
+        path: public/
+        remote_path: ${{ secrets.SERVER_DEPLOY_PATH }}
+        remote_host: ${{ secrets.SERVER_HOST }}
+        remote_port: ${{ secrets.SERVER_PORT }}
+        remote_user: ${{ secrets.SERVER_USER }}
+        remote_key: ${{ secrets.SERVER_SSH_KEY }}
 
