--- a/data/authors/gabriel.yaml
+++ b/data/authors/gabriel.yaml
@@ -2,6 +2,6 @@ name: "Gabriel P. da Silva"
 bio:
   pt: "Professor do Instituto de Computação da UFRJ"
   en: "Professor at Instituto de Computação da UFRJ"
-avatar: "author_img/gabriel.png"
+avatar: "/author_img/gabriel.png"
 
 
