fix: "Mais informações de contato" agora tem links diferentes em inglês e português

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -2,7 +2,7 @@
   children:
     - children:
       - name: História
-        url: /artigos/historia
+        url: /artigos/historia/
       - name: "Missão, Visão e Valores"
       - name: Espaço Físico
       - name: Estrutura Administrativa
@@ -14,7 +14,7 @@
         - name: Docentes
         - name: Corpo Técnico
         - name: Lista de Autores do Site
-          url: /autores
+          url: /autores/
 
 - name: Ensino
   children:
