adicionada a foto do supervisao_lci

--- a/data/authors/supervisao_lci.yaml
+++ b/data/authors/supervisao_lci.yaml
@@ -2,5 +2,5 @@ name: "Supervisão do LCI"
 bio:
   pt: "Equipe de monitores responsável pelos laboratórios e pelo website do IC"
   en: "Team of alumni that manages the IC's laboratories and website"
-avatar: "/author_img/supervisao_lci.png"
+avatar: "/author_img/supervisao_lci.jpg"
 
