--- a/data/docentes/professores_permanentes.yaml
+++ b/data/docentes/professores_permanentes.yaml
@@ -97,34 +97,43 @@
 
 - name: julianabsf
   nome: Juliana França
+  lattes: https://lattes.cnpq.br/9341068095520817
 
 - name: juvianna
   nome: Juliana Valério
+  lattes: https://lattes.cnpq.br/7094932502443475
 
 - name: luziane
   nome: Luziane Mendonça
   mostrar_site: true
+  lattes: https://lattes.cnpq.br/4092412037479077
 
 - name: marcellogt
   nome: Marcello Teixeira
   mostrar_site: true
+  lattes: https://lattes.cnpq.br/1551165098428375
 
 - name: marcosleipnitz
   nome: Marcos Leipnitz
+  lattes: https://lattes.cnpq.br/2595714723809105
 
 - name: mhelena
   nome: Maria Helena Cautiero
+  lattes: https://lattes.cnpq.br/5855175438608498
 
 - name: mluiza
   nome: Maria Luiza Campos
+  lattes: https://lattes.cnpq.br/0659658820912418
 
 - name: rincon
   nome: Mauro Rincon
   mostrar_site: true
+  lattes: https://lattes.cnpq.br/2436767709775022
 
 - name: mitre
   nome: Mitre Dourado
   mostrar_site: true
+  lattes: https://lattes.cnpq.br/0841425239502177
 
 - name: paulomann
   nome: Paulo Roberto Mann
