--- a/data/docentes/professores_permanentes.yaml
+++ b/data/docentes/professores_permanentes.yaml
@@ -137,9 +137,11 @@
 
 - name: paulomann
   nome: Paulo Roberto Mann
+  lattes: https://lattes.cnpq.br/3571577377652346
 
 - name: rafaelmello
   nome: Rafael Mello
+  lattes: http://lattes.cnpq.br/5514393713941443
 
 - name: ronaldsouza
   nome: Ronald Souza
