--- a/data/docentes/professores_permanentes.yaml
+++ b/data/docentes/professores_permanentes.yaml
@@ -164,11 +164,13 @@
 - name: valeriab
   nome: Valeria Bastos
   mostrar_site: true
-  lattes: 
+  lattes: https://lattes.cnpq.br/6948667770415330
 
 - name: vigusmao
   nome: Vinícius Gusmão
   mostrar_site: true
+  lattes: https://lattes.cnpq.br/1507369025671110
 
 - name: vivian
   nome: Vivian dos Santos
+  lattes: https://lattes.cnpq.br/6480849016794725
