--- a/data/docentes/professores_substitutos.yaml
+++ b/data/docentes/professores_substitutos.yaml
@@ -1,31 +1,31 @@
-- name: annarafaela
+- username: annarafaela
   nome: Anna Rafaela Silva Ferreira
 
-- name: cesarraitz
+- username: cesarraitz
   nome: Larissa Monteiro da Fonseca Galeno
 
-- name: luansimoes
+- username: luansimoes
   nome: Luan Simões Cardoso
 
-- name: lucenildo
+- username: lucenildo
   nome: Lucenildo Silva Cerqueira
 
-- name: luiz.paulo.carvalho
+- username: luiz.paulo.carvalho
   nome: Luiz Paulo Carvalho da Silva
 
-- name: luizpaulonascimento
+- username: luizpaulonascimento
   nome: Luiz Paulo do Nascimento
 
-- name: basiliog
+- username: basiliog
   nome: Maria Gabriella Cavalcante Basílio
 
-- name: rogers
+- username: rogers
   nome: Rogers Reiche de Mendonça
 
-- name: thiagohenrique
+- username: thiagohenrique
   nome: Thiago Henrique Neves Coelho
 
-- name: thiagorocha
+- username: thiagorocha
   nome: Thiago José Barbosa da Rocha
 
 
