Corrigir os nomes dos professores
Não devemos mudar o nome dos professores sem perguntar primeiro para eles.

--- a/data/docentes/professores_permanentes.yaml
+++ b/data/docentes/professores_permanentes.yaml
@@ -1,158 +1,158 @@
 - username: avivacqua
-  nome: Adriana Vivacqua
+  nome: Adriana Santarosa Vivacqua
   lattes: https://lattes.cnpq.br/6494676052801758
 
 - username: aloisiopina
-  nome: Aloísio Pina
+  nome: Aloísio Carlos de Pina
   lattes: https://lattes.cnpq.br/4830003855063986
 
 - username: amaury
-  nome: Amaury Cruz
+  nome: Amaury Alvarez Cruz
   lattes: https://lattes.cnpq.br/0370476774197561
 
 - username: anamaria
-  nome: Anamaria Moreira
+  nome: Anamaria Martins Moreira
   lattes: https://lattes.cnpq.br/2363575151206774
 
 - username: angela
-  nome: Angela Gonçalves
+  nome: Angela Maria Silva Gonçalves
   lattes: https://lattes.cnpq.br/7053082548725110
 
 - username: carla
-  nome: Carla Delgado
+  nome: Carla Amor Divino Moreira Delgado
   mostrar_site: true
   lattes: https://lattes.cnpq.br/3831909651244142
 
 - username: carolina
-  nome: Carolina Marcelino
+  nome: Carolina Gil Marcelino
   lattes: https://lattes.cnpq.br/3289676418940953
 
 - username: cfb
-  nome: Claudson Bornstein
+  nome: Claudson Ferreira Bornstein
   mostrar_site: true
   lattes: https://lattes.cnpq.br/6406237838495230
 
 - username: danielbastos
-  nome: Daniel Bastos
+  nome: Daniel Chicayban Bastos
   lattes: https://lattes.cnpq.br/4693433228817945
 
 - username: dgalfaro
-  nome: Daniel Alfaro
+  nome: Daniel Gregório Alfaro Vigo
   mostrar_site: true
   lattes: https://lattes.cnpq.br/8694890749217765
 
 - username: sadoc
-  nome: Daniel Sadoc
+  nome: Daniel Sadoc Menasché
   mostrar_site: true
   lattes: https://lattes.cnpq.br/9931198850020140
 
 - username: eldany
-  nome: Eldanae Teixeira
+  nome: Eldanae Nogueira Teixeira
   lattes: https://lattes.cnpq.br/6257705605159525
 
 - username: gabriel
-  nome: Gabriel P. Silva
+  nome: Gabriel Pereira da Silva
   mostrar_site: true
   lattes: https://lattes.cnpq.br/8636301961155552
 
 - username: gabrielaquino
-  nome: Gabriel Caldas
+  nome: Gabriel Rodrigues Caldas de Aquino
   mostrar_site: true
   lattes: https://lattes.cnpq.br/4613499627488074
 
 - username: giseli
-  nome: Giseli Lopes
+  nome: Giseli Rabello Lopes
   mostrar_site: true
   lattes: https://lattes.cnpq.br/9439416101626260
 
 - username: hugonobrega
-  nome: Hugo Nobrega
+  nome: Hugo de Holanda Cunha Nobrega
   mostrar_site: true
   site: https://hugonobrega.com/
   lattes: https://lattes.cnpq.br/6062840240299930
 
 - username: hugomg
-  nome: Hugo Musso
+  nome: Hugo Musso Gualandi
   mostrar_site: true
   lattes: https://lattes.cnpq.br/4885349527302978
 
 - username: jpaixao
-  nome: JoãomPaixão
+  nome: João Antonio Recio Paixão
   mostrar_site: true
   lattes: https://lattes.cnpq.br/5705386762324718
 
 - username: jcps
-  nome: João Carlos P. Silva
+  nome: João Carlos Pereira da Silva
   mostrar_site: true
   lattes: https://lattes.cnpq.br/9413102524215939
 
 - username: jonice
-  nome: Jonice Oliveira
+  nome: Jonice de Oliveira Sampaio
   mostrar_site: true
   lattes: https://lattes.cnpq.br/0990344839864230
 
 - username: clima
-  nome: Cabral Lima
+  nome: Josefino Cabral Melo Lima
   lattes: https://lattes.cnpq.br/5775431994199579
 
 - username: julianabsf
-  nome: Juliana França
+  nome: Juliana Baptista dos Santos França
   lattes: https://lattes.cnpq.br/9341068095520817
 
 - username: juvianna
-  nome: Juliana Valério
+  nome: Juliana Vianna Valério
   lattes: https://lattes.cnpq.br/7094932502443475
 
 - username: luziane
-  nome: Luziane Mendonça
+  nome: Luziane Ferreira de Mendonça
   mostrar_site: true
   lattes: https://lattes.cnpq.br/4092412037479077
 
 - username: marcellogt
-  nome: Marcello Teixeira
+  nome: Marcello Goulart Teixeira
   mostrar_site: true
   lattes: https://lattes.cnpq.br/1551165098428375
 
 - username: marcosleipnitz
-  nome: Marcos Leipnitz
+  nome: Marcos Tomazzoli Leipnitz
   lattes: https://lattes.cnpq.br/2595714723809105
 
 - username: mhelena
-  nome: Maria Helena Cautiero
+  nome: Maria Helena Cautiero Horta Jardim
   lattes: https://lattes.cnpq.br/5855175438608498
 
 - username: mluiza
-  nome: Maria Luiza Campos
+  nome: Maria Luiza Machado Campos
   lattes: https://lattes.cnpq.br/0659658820912418
 
 - username: rincon
-  nome: Mauro Rincon
+  nome: Mauro Antonio Rincon
   mostrar_site: true
   lattes: https://lattes.cnpq.br/2436767709775022
 
 - username: mitre
-  nome: Mitre Dourado
+  nome: Mitre Costa Dourado
   mostrar_site: true
   lattes: https://lattes.cnpq.br/0841425239502177
 
 - username: paulomann
-  nome: Paulo Roberto Mann
+  nome: Paulo Roberto Mann Marques Júnior
   lattes: https://lattes.cnpq.br/3571577377652346
 
 - username: rafaelmello
-  nome: Rafael Mello
+  nome: Rafael Maiani de Mello
   lattes: https://lattes.cnpq.br/5514393713941443
 
 - username: ronaldsouza
-  nome: Ronald Souza
+  nome: Ronald Chiesse de Souza
   lattes: https://lattes.cnpq.br/4970955316457568
 
 - username: sergioserra
-  nome: Sérgio Serra
+  nome: Sérgio Manuel Serra da Cruz
   lattes: https://lattes.cnpq.br/7618571401128973
 
 - username: collier
-  nome: Collier Coutinho
+  nome: Severino Collier Coutinho
   mostrar_site: true
   lattes: https://lattes.cnpq.br/1416717596426384
 
@@ -162,15 +162,15 @@
   lattes: https://lattes.cnpq.br/0054098292730720
 
 - username: valeriab
-  nome: Valeria Bastos
+  nome: Valeria Menezes Bastos
   mostrar_site: true
   lattes: https://lattes.cnpq.br/6948667770415330
 
 - username: vigusmao
-  nome: Vinícius Gusmão
+  nome: Vinícius Gusmão Pereira de Sá
   mostrar_site: true
   lattes: https://lattes.cnpq.br/1507369025671110
 
 - username: vivian
-  nome: Vivian dos Santos
+  nome: Vivan dos Santos Silva
   lattes: https://lattes.cnpq.br/6480849016794725
