--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -15,7 +15,7 @@
           url: /info/estrutura-administrativa/
         - name: Corpo Docente
           url: /info/docentes/
-        - name: Corpo Técnico
+        # - name: Corpo Técnico
         - name: Lista de Autores do Site
           url: /autores/
 
@@ -30,6 +30,7 @@
         - name: Normas de Atividades Complementares
         - name: Calendário de Provas
         - name: Manual do Aluno
+          url: /info/manual-do-aluno-bcc/
     - name: BCMT
       children:
         - name: Ênfase em Análise de Dados
