--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -26,9 +26,11 @@
         - name: Sobre o Curso
           url: /info/sobre-o-bcc/
         - name: Grade Curricular
-        - name: Normas de Estágio
+        # NO AGUARDO DA COMISSÃO DE ESTÁGIO
+        # - name: Normas de Estágio
         - name: Normas de Atividades Complementares
         - name: Calendário de Provas
+          url: /info/calendario-provas-bcc/
         - name: Manual do Aluno
           url: /info/manual-do-aluno-bcc/
     - name: BCMT
